--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,7 @@ tauri = { version = "1.2", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 secrecy = { version = "0.8.0", features = ["serde"] }
+directories = "5.0.0"
 
 [dependencies.reqwest]
 version = "0.11.15"
