--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 secrecy = { version = "0.8.0", features = ["serde"] }
 directories = "5.0.0"
+tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
 
 [dependencies.reqwest]
 version = "0.11.15"
