--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ secrecy = { version = "0.8.0", features = ["serde"] }
 directories = "5.0.0"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
+anyhow = "1.0.70"
 
 [dependencies.reqwest]
 version = "0.11.15"
